Checkmate logic